<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.student.termproject.coldPlayInfo"
    tools:showIn="@layout/activity_cold_play_info">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/coldPlay"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="61dp"
            android:text="@string/listmem" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="13dp"
            android:layout_toStartOf="@+id/textView7"
            android:text="@string/cp1"
            android:onClick="seePersonInfo1"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="10dp"
            android:text="@string/cp2"
            android:onClick="seePersonInfo2"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cp3"
            android:layout_below="@+id/textView10"
            android:layout_alignStart="@+id/textView10"
            android:onClick="seePersonInfo3"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/cp4"
            android:layout_below="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            android:onClick="seePersonInfo4"
            android:linksClickable="true"/>

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/redbutton" />

        <ImageButton
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnPlay"
            android:layout_alignEnd="@+id/btnPlay"
            app:srcCompat="@drawable/pause" />

        <CheckBox
            android:id="@+id/cbAutoReplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnPlay"
            android:layout_centerHorizontal="true"
            android:text="@string/cbcb" />

        <EditText
            android:id="@+id/txtNumTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbAutoReplay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="@string/Ticketss"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/cbVIPorN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VIP"
            android:layout_below="@+id/txtNumTickets"
            android:layout_alignStart="@+id/txtNumTickets" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbVIPorN"
            android:layout_toEndOf="@+id/textView10"
            android:text="@string/btnCalc" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCalculate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/home"
            android:onClick="backHome"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
