<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.student.termproject.imagineDragonsInfo"
    tools:showIn="@layout/activity_imagine_dragons_info">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/iG"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="61dp"
            android:text="@string/listmem" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView13"
            android:layout_below="@+id/textView14"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/ig1"
            android:onClick="seePersonInfo1"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView15"
            android:layout_below="@+id/textView15"
            android:layout_marginTop="11dp"
            android:text="@string/ig2"
            android:onClick="seePersonInfo2"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView16"
            android:layout_below="@+id/textView16"
            android:layout_marginTop="11dp"
            android:text="@string/ig3"
            android:onClick="seePersonInfo3"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView17"
            android:layout_below="@+id/textView17"
            android:layout_marginTop="12dp"
            android:text="@string/ig4"
            android:onClick="seePersonInfo4"
            android:linksClickable="true"/>

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/redbutton"
            android:layout_below="@+id/textView18"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/pause"
            android:layout_above="@+id/cbAutoReplay"
            android:layout_centerHorizontal="true" />

        <CheckBox
            android:id="@+id/cbAutoReplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbcb"
            android:layout_below="@+id/btnPlay"
            android:layout_toEndOf="@+id/textView17" />

        <EditText
            android:id="@+id/txtNumTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="@string/Ticketss"
            android:inputType="number"
            android:layout_below="@+id/cbAutoReplay"
            android:layout_centerHorizontal="true" />

        <CheckBox
            android:id="@+id/cbVIPorN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txtNumTickets"
            android:layout_below="@+id/txtNumTickets"
            android:text="@string/VIP" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/cbAutoReplay"
            android:layout_below="@+id/cbVIPorN"
            android:text="@string/btnCalc" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btnPlay"
            android:layout_marginBottom="15dp" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/home"
            android:onClick="backHome"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
