<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.student.termproject.theBeatlesInfo"
    tools:showIn="@layout/activity_the_beatles_info">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/theBeatles"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="14dp"
            android:layout_toStartOf="@+id/textView"
            android:text="@string/listmem"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="52dp"
            android:layout_marginTop="11dp"
            android:text="@string/beatle1"
            android:onClick="seePersonInfo1"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="16dp"
            android:text="@string/beatle2"
            android:onClick="seePersonInfo2"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="16dp"
            android:text="@string/beatle3"
            android:onClick="seePersonInfo3"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="14dp"
            android:text="@string/beatle4"
            android:onClick="seePersonInfo4"
            android:linksClickable="true"/>

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/redbutton" />

        <ImageButton
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnPlay"
            android:layout_toEndOf="@+id/textView4"
            app:srcCompat="@drawable/pause" />

        <CheckBox
            android:id="@+id/cbAutoReplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnPlay"
            android:layout_centerHorizontal="true"
            android:text="@string/cbcb" />

        <EditText
            android:id="@+id/txtNumTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbAutoReplay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/Ticketss"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/cbVIPorN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VIP"
            android:layout_below="@+id/txtNumTickets"
            android:layout_alignStart="@+id/txtNumTickets" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbVIPorN"
            android:layout_centerHorizontal="true"
            android:text="@string/btnCalc" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCalculate"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@+id/textView6" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/home"
            android:onClick="backHome"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
